--- a/style/style.css
+++ b/style/style.css
@@ -2,3 +2,21 @@ body {
 	margin: 0;
 	padding: 0;
 }
+
+
+
+@media (min-width: 576px) {
+  
+}
+
+@media (min-width: 768px) {
+  
+}
+
+@media (min-width: 992px) {
+  
+}
+
+@media (min-width: 1200px) {
+  
+}
